ready fro heroku

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
+NODE_ENV=production
 PORT=5000
 MONGO_URI=mongodb+srv://alihesham:ali123@alihesham.4sd4h.mongodb.net/onlineshop?retryWrites=true&w=majority
 PAYPAL_ID=AftQsXbSeuQt-Cg1ZDC1Oj6OxzE1XJqfiwOiahPth6RWKF_QkGhinELbXRWUfvMqf32gsO9oxJRV4cXU
